2010-05-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/dmatrix.m:

	- Matrix of distances between vectors. Move from Comlab
	repository, matlab-toolbox/misc/trunk.

2010-04-30  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage.m:

	- Fix bug with dir name when data is in the current directory.

2010-04-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_gradients.m:

	- Vicente suggested using an explicit formula with a 3x3
	neighbourhood to compute the second order gradients, instead of
	running function gradient() twice (which uses a 5x5 neighbourhood).

2010-03-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/dijkstra.cpp:

	- Nodes not connected to the source get a NaN as parent. They were
	getting a 1, which is a bug. By making it NaN, it also mimics the
	output of Matlog Toolbox's function dijk(), that has a native
	Matlab implementation of the same algorithm.

	* Add CardiacToolbox/scinrrd_rv_crescent_tips.m:

	- Extract the tips of the crescent-shaped curve in all slices of
	the Right Ventricle.

	* Add CardiacToolbox/is_lv_on_the_left.m:

	- Check whether the left ventricle is on the left hand side of the
	image.

	* Add CardiacToolbox subdirectory for functions that are specific
	to cardiac image processing.

	* Add ThirdPartyToolbox/dijkstra.m,
	ThirdPartyToolbox/dijkstra.cpp, ThirdPartyToolbox/fibheap.h:

	- DIJKSTRA Shortests path tree from sparse matrix graph.

	* Add ThirdPartyToolbox/LICENCE

	- To explan licence difference of files in this subdirectory.

	* Add ThirdPartyToolbox directory for derivative works or third
	party functions that cannot be covered by the GPL used elsewhere
	in Gerardus, or code with an uncertain licence status.

	* FiltersToolbox/img_adjacency_distance.m:

	- Add Matlab implementation of the function, to compare with the
	MEX implementation.

2010-03-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
